@@ -7,6 +7,7 @@
  * You can now configure the Picard web-cache which can avoid repeated downloads of 
    MB data and cover art if you give it enough disk space.
  * Refresh of albums using Ctrl-R whilst loading folders is now faster
+ * Requests to Musicbrainz against your own account e.g. for collections are now handled through SSL
 
 Version 1.2 - 2013-03-30
  * Picard now requires at least Python 2.6
